fix(darkMode): Fix dark mode toggle #11

--- a/src/components/card-news/card-news.component.scss
+++ b/src/components/card-news/card-news.component.scss
@@ -2,7 +2,7 @@
     // min-width: 10em;
     display: flex;
     max-width: 30em;
-    background-color: white;
+    // background-color: white;
   }
 
   .card-news img {
