--- a/src/components/grid-of-news/grid-of-news.component.scss
+++ b/src/components/grid-of-news/grid-of-news.component.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: white;
+    // background-color: white;
 
 }
 
